[gd_scene load_steps=26 format=3 uid="uid://cbxfe41yjfrlh"]

[ext_resource type="Script" uid="uid://jtgtjw7odld8" path="res://Player/evo_1.gd" id="1_5psm4"]
[ext_resource type="Texture2D" uid="uid://crjpji6bcfj0b" path="res://Player/2idle.png" id="2_j3qaj"]
[ext_resource type="Texture2D" uid="uid://ilsr30swu5w6" path="res://Player/climb.png" id="2_vbwkl"]
[ext_resource type="Texture2D" uid="uid://cjmv70v7j2rfl" path="res://Player/escalade.png" id="3_tj6lq"]
[ext_resource type="Texture2D" uid="uid://djc1rgquffptw" path="res://Player/escalade2.png" id="4_jjtta"]
[ext_resource type="Texture2D" uid="uid://vdd8mvvr4fa3" path="res://Player/2jump4.png" id="4_no3im"]
[ext_resource type="Texture2D" uid="uid://dnlrs7n5ds4di" path="res://Player/2jump1.png" id="5_1casu"]
[ext_resource type="Texture2D" uid="uid://dn5hvw2nrdhol" path="res://Player/dos.png" id="5_ifp5e"]
[ext_resource type="Texture2D" uid="uid://daqxj7bny8nq0" path="res://Player/dos1.png" id="6_m3p76"]
[ext_resource type="Texture2D" uid="uid://bnmgkg5lgqb4r" path="res://Player/2walk1.png" id="6_tj6lq"]
[ext_resource type="Texture2D" uid="uid://bilj6yc1uvvb7" path="res://Player/2walk2.png" id="7_maao0"]
[ext_resource type="Texture2D" uid="uid://c0r3hdd7j6beq" path="res://Player/dos2.png" id="7_p7kcq"]
[ext_resource type="AudioStream" uid="uid://dttjlu8e8c2o1" path="res://sounds/walk.wav" id="11_leyao"]
[ext_resource type="AudioStream" uid="uid://cwm8ik73bpjog" path="res://sounds/jump.wav" id="12_5vkkw"]
[ext_resource type="PackedScene" uid="uid://healthbar" path="res://Player/HealthBar/HealthBar.tscn" id="19_rbgwy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3qaj"]
size = Vector2(608.331, 684.397)

[sub_resource type="Animation" id="Animation_m3p76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_m3p76")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150, 71.6667)]
}

[sub_resource type="Animation" id="Animation_p7kcq"]
resource_name = "climb"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_vbwkl"), ExtResource("2_vbwkl")]
}

[sub_resource type="Animation" id="Animation_p8mbp"]
resource_name = "climb_coco"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_tj6lq"), ExtResource("4_jjtta")]
}

[sub_resource type="Animation" id="Animation_ifp5e"]
resource_name = "door"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_ifp5e"), ExtResource("7_p7kcq"), ExtResource("6_m3p76"), ExtResource("7_p7kcq"), ExtResource("6_m3p76")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(150, 71.6667), Vector2(150, 50.667), Vector2(150, 40.667), Vector2(150, 30.667), Vector2(150, 20.667)]
}

[sub_resource type="Animation" id="Animation_i1uru"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_j3qaj"), ExtResource("2_j3qaj")]
}

[sub_resource type="Animation" id="Animation_typba"]
resource_name = "jump_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_1casu"), ExtResource("5_1casu")]
}

[sub_resource type="Animation" id="Animation_rbgwy"]
resource_name = "jump_up"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_no3im"), ExtResource("4_no3im")]
}

[sub_resource type="Animation" id="Animation_vbwkl"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_tj6lq"), ExtResource("7_maao0"), ExtResource("6_tj6lq"), ExtResource("7_maao0"), ExtResource("6_tj6lq"), ExtResource("7_maao0")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p7kcq"]
_data = {
&"RESET": SubResource("Animation_m3p76"),
&"climb": SubResource("Animation_p7kcq"),
&"climb_coco": SubResource("Animation_p8mbp"),
&"door": SubResource("Animation_ifp5e"),
&"idle": SubResource("Animation_i1uru"),
&"jump_down": SubResource("Animation_typba"),
&"jump_up": SubResource("Animation_rbgwy"),
&"walk": SubResource("Animation_vbwkl")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
scale = Vector2(1.2, 1.2)
collision_mask = 270
script = ExtResource("1_5psm4")
speed = 600

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(150, 71.6667)
scale = Vector2(0.08, 0.08)
texture = ExtResource("6_m3p76")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(149.583, 71.1667)
scale = Vector2(0.1, 0.094)
shape = SubResource("RectangleShape2D_j3qaj")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p7kcq")
}

[node name="HealthBar" parent="." instance=ExtResource("19_rbgwy")]
position = Vector2(120, 22)
scale = Vector2(0.1, 0.094)

[node name="TurnAxis" type="Marker2D" parent="."]
position = Vector2(170, 48)
rotation = 0.785398

[node name="CastPoint" type="Marker2D" parent="TurnAxis"]
position = Vector2(0, 3.05176e-05)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(151, 61)
zoom = Vector2(1.2, 1.2)
limit_left = 0
limit_top = 0
limit_right = 6500
limit_bottom = 1500
position_smoothing_enabled = true

[node name="Sound" type="Node2D" parent="."]

[node name="Walk" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("11_leyao")

[node name="Jump" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("12_5vkkw")
